<resources>
    <string name="app_name">MyAPP</string>
    <string name="str1">Hello</string>
    <string name="str3">begin</string>
    <string name="str2">Temperature is:</string>
    <string name="str4">Change it to Fahrenheit</string>
    <string name="str5">+3 point</string>
    <string name="str6">+2 point</string>
    <string name="str7">+1 point</string>
    <string name="str8">reset</string>
    <string name="str9">0</string>
    <string name="str10">Team A</string>
    <string name="tips">input RMB</string>
    <string name="dollar">DOLLAR</string>
    <string name="euro">EURO</string>
    <string name="won">WON</string>
    <string name="config">CONFIG</string>
    <string name="open_list">Open_List</string>
    <string name="hello_world">欢迎使用！</string>
    <string name="lab_approve">赞成</string>
    <string name="lab_object">反对</string>
    <string name="lab_abstain">弃权</string>
</resources>
