<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:inputType="number|numberDecimal"
            android:hint="@string/tips"
            android:textSize="40sp" />


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:textSize="60sp"
            android:text="@string/str1" />

        <Button
            android:id="@+id/dollar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginBottom="20dp"
            android:onClick="onClick"
            android:text="@string/dollar" />

        <Button
            android:id="@+id/euro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginBottom="20dp"
            android:onClick="onClick"
            android:text="@string/euro" />

        <Button
            android:id="@+id/won"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginBottom="20dp"
            android:onClick="onClick"
            android:text="@string/won" />

        <Button
            android:id="@+id/config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="openOne"
            android:layout_marginBottom="20dp"
            android:text="@string/config" />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>